Make the printer configuration dialog non-modal

Commit 1595ef0614f824a6a871d51327eff3a108e6e251 (a partial fix for bug
314633) changed the password dialog to be non-modal.
But the printer configuration dialog is still modal, so if a password is
needed to apply/save the configuration it cannot be entered because the
password dialog cannot get focus.

This patch sets the configuration dialog to be non-modal as well to
prevent this problem.
BUG: 328014
FIXED-IN: 14.12.2
REVIEW: 121351